--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=1MB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=230MB
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=clubiste400@gmail.com
+spring.mail.password=gyep lhzr zzjt nijf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
