--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/recruitment
+spring.datasource.url=jdbc:mysql://localhost:3306/backend
 spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB106Dialect
 spring.servlet.multipart.enabled=true
