--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.mail.username=clubiste400@gmail.com
 spring.mail.password=gyep lhzr zzjt nijf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+logging.level.web=ERROR
+logging.level.org.springframework.web=ERROR
