internshipApplication acceptation process

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ spring.mail.password=gyep lhzr zzjt nijf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.web=ERROR
-logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.web=DEBUG
+nombre.max.encadramant=5
