add tasks and kafka notifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.web=ERROR
 logging.level.org.springframework.web=DEBUG
 nombre.max.encadramant=5
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.consumer.properties.spring.json.value.default.type=com.example.recruitment.models.Notification
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
